[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/TutorialLabel.gd" type="Script" id=1]
[ext_resource path="res://assets/fff-forward.regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/TutorialMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="AnimatedTexture" id=2]
frames = 2
fps = 2.0
frame_1/delay_sec = 0.0

[node name="TutorialMenu" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialLabel" type="Label" parent="."]
margin_left = 118.0
margin_top = 191.0
margin_right = 482.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 1 )
text = "\"Earth is under attack!
The Glonks are invading!"
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialLabel2" type="Label" parent="."]
visible = false
margin_left = 118.0
margin_top = 191.0
margin_right = 482.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 1 )
text = "The Glonks are ruthless space criminals, responsible for the destruction of multiple planets...
"
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialLabel3" type="Label" parent="."]
visible = false
modulate = Color( 0.929412, 0.0156863, 0.827451, 1 )
margin_left = 118.0
margin_top = 191.0
margin_right = 482.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 1 )
text = "Earth is surely doomed... Unless...
A certain robo-bird stops their evil plan...
"
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 284.0
margin_top = 377.0
margin_right = 316.0
margin_bottom = 409.0
texture_normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
